# causal-seal-spec

./: LICENSE  README.md  SPEC.md  causal-seal.schema.json  causal_seal.py  pyproject.toml
docs/: CNAME  about.html  ai-act.html  charter.html  faq.html  index.html  install.html  nist.html  sectors.html  us-states.html  verify.html
docs/profiles/: baten-chat.json
paper/: PAPER.md  PAPER_print.html
test-vectors/: README.md  invalid-001.json  valid-001.json
